[tool.poetry]
name = "lebex"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "lebex", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13.7"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
gunicorn = "^23.0.0"
slack-bolt = "^1.23.0"
aiohttp = "^3.12.14"
langgraph = "^1.0.9"
langchain-openai = "^0.3.32"
langchain-community = "^0.3.27"
langgraph-checkpoint-postgres = "^2.0.21"
psycopg = {extras = ["binary"], version = "^3.2.9"}
sqlalchemy = "^2.0.41"
fastapi-pagination = "^0.13.3"
fastapi-filter = "^2.0.1"
sqlakeyset = "^2.0.1746777265"
asyncpg = "^0.30.0"
cryptography = "^45.0.5"
rapidfuzz = "^3.13.0"
joblib = "^1.5.1"
scikit-learn = "^1.7.1"
async-lru = "^2.0.5"
aiomysql = "^0.2.0"
pyjwt = "^2.10.1"
tabulate = "^0.9.0"
babel = "^2.17.0"
jinja2 = "^3.1.6"
phonenumbers = "^9.0.11"
pytz = "^2025.2"
python-multipart = "^0.0.20"
pillow = "^11.3.0"
openai = "^1.101.0"
pdf2image = "^1.17.0"
emoji = "^2.14.1"
more-itertools = "^10.8.0"
pgvector = "^0.4.1"
aiosqlite = "^0.21.0"
greenlet = "^3.3.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
polyfactory = "^2.22.0"
openevals = "^0.1.0"
dirty-equals = "^0.9.0"
pytest-xdist = "^3.8.0"
syrupy = "^4.9.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"
watchfiles = "^1.1.0"
joblib-stubs = "^1.5.0.1.20250510"
mypy = "^1.17.1"
socksio = "^1.0.0"
pyppeteer = "^2.0.0"
pyupgrade = "^3.20.0"
debugpy = "^1.8.16"

[tool.poetry.group.train.dependencies]
nlpaug = "^1.1.11"
nltk = "^3.9.1"
transformers = "^4.54.0"
#torch = "^2.7.1"

[tool.poetry.group.alembic.dependencies]
alembic = "^1.16.4"
ruff = "^0.12.5"


[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.ruff]
src = ["src", "."]
target-version = "py313"
line-length = 79
unsafe-fixes = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # isort
    "I",
    # pyupgrade
    "UP",
]


[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
